--- a/movie_app/package.json
+++ b/movie_app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-lines-ellipsis": "^0.14.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
@@ -31,5 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage" : "http://chiitoitsu.github.io/movie_app"
+  "homepage": "http://chiitoitsu.github.io/movie_app"
 }
